k8s/ingress/kafka-ui.ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kafka-ingress
  namespace: cineverse
spec:
  ingressClassName: nginx
  rules:
    - host: kafkaui.localhost
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kafka-ui
                port:
                  number: 8080
