k8s/ingress/seq.ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: seq-ingress
  namespace: cineverse
spec:
  ingressClassName: nginx
  rules:
    - host: seq.localhost
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: seq
                port:
                  number: 80
